<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LifeParametersActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="101dp" />

    <TextView
        android:id="@+id/weightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/elementsLeftMargin"
        android:layout_marginTop="@dimen/topElementMargin"

        android:text="Вес"
        android:textSize="16dp"

        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="60dp"
        android:layout_height="32dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="172dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="80"
        android:inputType="number"

        android:text=""
        android:textAlignment="center"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/elementsLeftMargin"
        android:layout_marginTop="32dp"
        android:text="@string/kolvoshagov"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightText" />

    <EditText
        android:id="@+id/stepsInput"
        android:layout_width="60dp"
        android:layout_height="32dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="224dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="100"
        android:inputType="number"

        android:text=""
        android:textAlignment="center"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/elementsLeftMargin"
        android:layout_marginTop="@dimen/lowerButtonsTopMargin"
        android:onClick="saveParameters"
        android:text="@string/saveBtn"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/elementsLeftMargin"
        android:layout_marginTop="16dp"
        android:onClick="goBack"
        android:text="@string/patientData"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />


</androidx.constraintlayout.widget.ConstraintLayout>